--- a/react笔记/5.类组件.md
+++ b/react笔记/5.类组件.md
@@ -248,7 +248,9 @@ class Demo extends React.PureComponent {
     + 发生在componentDidUpdate周期函数之后「DidUpdate会在任何状态更改后都触发执行；而回调函数方式，可以在指定状态更新后处理一些事情；」
     + 特殊：即便我们基于shouldComponentUpdate阻止了状态/视图的更新，DidUpdate周期函数肯定不会执行了，但是我们设置的这个callback回调函数依然会被触发执行！！
     + 类似于Vue框架中的$nextTick！！
-
++ 在React18 和 React16中，关于setState是同步还是异步，是有一些区别的！
+    + React18中：不论在什么地方执行setState，它都是异步的「都是基于updater更新队列机制，实现的批处理」
+    + React16中：如果在合成事件「jsx元素中基于onXxx绑定的事件」、周期函数中，setState的操作是异步的！！但是如果setState出现在其他异步操作中「例如：定时器、手动获取DOM元素做的事件绑定等」，它将变为同步的操作「立即更新状态和让视图渲染」！！
 ![setState原理](./images/setState%E5%8E%9F%E7%90%86.jpg)
 ![flushSync](images/flushSync.jpg)
 
