--- a/react笔记/7.react Hooks.md
+++ b/react笔记/7.react Hooks.md
@@ -125,7 +125,49 @@ setState({
 ![useState中方法的执行16](images/useState中方法的执行16.jpg)
 ![useState执行](images/useState执行.jpg)
 
-#### usestate自带了性能优化的机制:
+#### useState自带了性能优化的机制:
 
 + 每一次修改状态值的时候，会拿最新要修改的值和之前的状态值做比较「基于Object.is作比较」
 + 如果发现两次的值是一样的，则不会修改状态，也不会让视图更新「可以理解为:类似于PureComponeht，在shouldComponentlpdate中做了比较和优化l
+![usestate自带了性能优化的机制](images/usestate自带了性能优化的机制.jpg)
+
+![prev](images/prev.jpg)
+![prev](images/prev原理.jpg)
+![prev](images/prev原理1.jpg)
+
+#### 惰性初始state
+
+如果初始 state 需要通过复杂计算获得，则可以传入一个函数，在函数中计算并返回初始的 state，此函数只在初始渲染时被调用！
+
+![惰性初始state](images/惰性初始state.jpg)
+
+#### 惰性初始state使用
+
+![惰性初始state](images/惰性初始state使用.jpg)
+
+## useEffect
+
+> useEffect:在函数组件中,使用生命周期函数
++ useEffect(callback)：没设置依赖
+  + 第一次渲染完毕后，执行callback，等价于componentDidMount
+  + 在组件每一次更新完毕后，也会执行callback，等价于componentDidUpdate
++ useEffect(callback, [])：设置了，但是无依赖
+  + 只有第一次渲染完毕后，才会执行callback，每一次视图更新完毕后，callback不再执行
+  + 类似于componentDidMount
++ useEffect(callback,[依赖的状态(多个状态)])：
+  + 第一次洹染完毕会执行callback
+  + 当依赖的状态值(或者多个依赖状态中的一个)发生改变，也会触发callback执行
+  + 但是依赖的状态如果没有变化，在组件更新的时候,callback是不会执行的
+
+```js
+useEffect(()=>{
+  return ()=>{
+    // 返回的小函数，会在组件释放的时候执行
+    // 如果组件更新，会把上一次返回的小函数执行「可以“理解为”上一次渲染的组件释放了」
+  };
+});
+```
+
+### useEffect原理
+![useEffect原理](images/useEffect原理.jpg)
+useEffect必须在函数的最外层上下文中调用，不能把其嵌入到条件判断、循环等操作语句中
