--- a/react笔记/7.react Hooks.md
+++ b/react笔记/7.react Hooks.md
@@ -169,5 +169,150 @@ useEffect(()=>{
 ```
 
 ### useEffect原理
+
+函数组件在渲染（或更新）期间，遇到useEffect操作，会基于MountEffect方法把callback（和依赖项）加入到effect链表中！
+
+在视图渲染完毕后，基于UpdateEffect方法，通知链表中的方法执行！
+
+1. 按照顺序执行期间，首先会检测依赖项的值是否有更新「有容器专门记录上一次依赖项的值」；有更新则把对应的callback执行，没有则继续处理下一项！！
+2. 遇到依赖项是空数组的，则只在第一次渲染完毕时，执行相应的callback
+3. 遇到没有设置依赖项的，则每一次渲染完毕时都执行相应的callback
 ![useEffect原理](images/useEffect原理.jpg)
+
+### 异步获取数据
+
+不能直接对[callback]设置async，因为它只能返回一个函数（或者不设置返回值）
 useEffect必须在函数的最外层上下文中调用，不能把其嵌入到条件判断、循环等操作语句中
+```js
+import React, { useState, useEffect } from "react";
+const queryData = () => {
+    return fetch('/api/subscriptions/recommended_collections')
+        .then(response => {
+            return response.json();
+        });
+};
+export default function Demo() {
+    let [data, setData] = useState([]);
+    /* // Warning: useEffect must not return anything besides a function, which is used for clean-up.
+    useEffect(async () => {
+        let result = await queryData();
+        setData(result);
+        console.log(result);
+    }, []); */
+    useEffect(() => {
+        const next = async () => {
+            let result = await queryData();
+            setData(result);
+            console.log(result);
+        };
+        next();
+    }, []);
+    return <div>
+        ...
+    </div>;
+};
+```
+
+## useLayoutEffect
+
+其函数签名与 useEffect 相同，但它会在所有的 DOM 变更之后同步调用 effect。
+可以使用它来读取 DOM 布局并同步触发重渲染。
+在浏览器执行绘制之前，useLayoutEffect 内部的更新计划将被同步刷新。
+尽可能使用标准的 useEffect 以避免阻塞视觉更新。
+```js
+import React, { useState, useEffect, useLayoutEffect } from "react";
+export default function Demo() {
+  let [num, setNum] = useState(0);
+  // 再试试useLayoutEffect
+  useEffect(() => {
+      if (num === 0) {
+          let random = +String(Math.random()).substring(2);
+          setNum(random);
+      }
+  }, [num]);
+  return <div
+      style={{
+          background: 'lightblue',
+          WebkitUserSelect: "none"
+      }}
+      onClick={() => {
+          setNum(0);
+      }}>
+      {num}
+  </div>;
+};
+```
+
+### useLayoutEffect与useEffect区别
+
+![useLayoutEffect与useEffect区别](images/useLayoutEffect与useEffect区别.jpg)
+![useLayoutEffect与useEffect区别](images/useLayoutEffect与useEffect区别1.jpg)
+
+useLayoutEffect会阻塞浏览器渲染真实DOM，优先执行Effect链表中的callback;
+useEffect不会阻塞浏览器渲染真实DOM，在渲染真实DOM的同时，去执行Effect链表中的callback;
++ useLayoutEffect设置的callback要优先于useEffect去执行!!
++ 在两者设置的callback中，依然可以获取DOM元素「原因∶真实DOW对象已经创建了，区别只是浏览器是否渲染」
++ 如果在callback函数中又修改了状态值「视图又要更新」
+  + useEffect:浏览器肯定是把第一次的真实已经绘制了，再去渲染第二次真实DOM
+  + useLayoutEffect:浏览器是把两次真实DOM的渲染，合并在一起渲染的
+
+视图更新的步骤︰
+第一步︰基于babel-preset-react-app把JSX编译为createElement格式
+第二步:把createElement执行，创建出virtualDoM
+第三步∶基于root.render方法把virtualDOM变为真实DOM对象「DOM-DIFF
+
+  + useLayoutEffect阻塞第四步操作，先去执行Effect链表中的方法「同步操作」+ useEffect第四步操作和Effect链表中的方法执行，是同时进行的「异步操作」
+
+第四步:浏览器渲染和绘制真实DOM对象
+![useLayoutEffect与useEffect区别](images/useLayoutEffect与useEffect区别2.jpg)
+
+## useRef
+
+##### 类组件中，我们基于ref可以做的事情：
+1. 赋值给一个标签：获取DOM元素
+2. 赋值给一个类子组件：获取子组件实例「可以基于实例调用子组件中的属性和方法等」
+3. 赋值给一个函数子组件：报错「需要配合React.forwardRef实现ref转发，获取子组件中的摸一个DOM元素」
+
+##### ref的使用方法：
+1. ref='box'
+   this.refs.box 获取 {不推荐使用}
+2. ref={x=>this.box=x}
+   this.box 获取
+3. this.box=React.createRef() 创建一个ref对象
+  ```js
+  <h2 ref={this.box}>
+  ```
+   this.box.current 获取DOM元素
+
+##### 函数组件
+
+1. 基于“ref={函数}”"的方式，可以把创建的DOM元素(或者子组件的实例)赋值给box变量「不推荐」
+2. 也可基于React.createRef创建ref对象来获取想要的内容
+3. 函数组件中，还可以基于useRef Hook函数，创建一个ref对象
+   + React.createRef也是创建ref对象，即可在类组件中使用，也可以在函数组件中使用
+   + useRef 只能在函数组件中用「所有的ReactHook函数，都只能在函数组件中时候用，在类组件中使用会报错」
+
+```js
+import React, { useState, useEffect, useRef, createRef } from "react";
+let prev;
+export default function Demo() {
+  const [num, setNum] = useState(0);
+  const btnBox = useRef(null); //换成createRef也是可以的
+  if (!prev) {
+      prev = btnBox;
+  } else {
+      console.log(prev === btnBox);
+  }
+  useEffect(() => {
+      console.log(btnBox.current);
+  }, []);
+  return <div>
+      <span>{num}</span>
+      <button ref={btnBox} onClick={() => setNum(num + 1)}>按钮</button>
+  </div>;
+};
+```
+
++ useRef再每一次组件更新的时候（函数重新执行)，再次执行useRef方法的时候，不会创建新的REF对象了，获取到的还是第一次创建的那个REF对象! !I
++ createRef在每一次组件更新的时候，都会创建一个全新的REF对象出来，比较浪费性能!!
+
