自定义hooks笔记

--- a/react笔记/7.react Hooks.md
+++ b/react笔记/7.react Hooks.md
@@ -420,3 +420,15 @@ useCallback不要乱用！并不是所有组件内部的函数，都拿其处理
 
 + 第一条∶传递给子组件的属性（函数)，每一次需要是相同的堆内存地址(是一致的)，基于useCallback处理! !
 + 第二条∶在子组件内部也要做一个处理，验证父组件传递的属性是否发生改变，如果没有变化，则让子组件不能更新，有变化才需要更新﹒继承React.PureComponent即可「在shouldcomponentUpdate中对新老属性做了浅比较」!!函数组件是基于React.memo 函数，对新老传递的属性做比较，如果不一致，才会把函数组件执行，如果一致，则不让子组件更新!!
+
+
+## 自定义hook
+
+> 作用:提取封装一些公共的处理逻辑
+
+#### 语法
+
+玩法:创建一个函数，名字需要是useXxx ，后期就可以在组件中调用这个方法!
+
+![自定义hook](images/自定义hook.jpg)
+![自定义hook](images/自定义hook1.jpg)
