--- a/react笔记/11.Redux.md
+++ b/react笔记/11.Redux.md
@@ -152,6 +152,8 @@ export const createStore = function createStore(reducer) {
 
 在真正的项目中，我们一定会把状态和reducer的管理，按照模块化进行划分
 
-![redux工程化](images/redux%E5%B7%A5%E7%A8%8B%E5%8C%96.png)
+![redux工程化](images/redux工程化.png)
 
 第一件事情:按照模块，把reducer进行单独管理,每个模块都有自己的reducer;最后，我们还要把所有的reducer进行合并，合并为一个，赋值给我们创建的store!!
+
+![redux工程化](images/redux工程化1.jpg)
